@@ -5,6 +5,8 @@
 - revert the dynamic wrapping for Python :-( next version!
 - added VImage::convert2disc (thanks Ole)
 - you can now set the jpeg quality factor for tiff pyramids (thanks Joe)
+- you can now shrink jpegs during read, see "man im_jpeg2vips"
+- added CMYK JPEG write
 
 12/12/07 started 7.13.3
 - added "include <cstring>" to VImage.cc to help gcc 4.3
